# gots

./: .gitignore  CLAUDE.md  EFFICIENT_EVENT_SYSTEM_SUMMARY.md  LEXICAL_SCOPE_DESIGN.md  Makefile  README.md  TEST_RESULTS_SUMMARY.md  array.h  ast_codegen.cpp  benchmark_class_goroutines.gts  benchmark_class_performance.gts  benchmark_switch_performance.gts  benchmark_switch_simple.gts  benchmark_working.gts  build.sh  calc.gts  compilation_context.cpp  compilation_context.h  compiler.cpp  compiler.h  constants.gts  debug_access_arg.gts  debug_add_call.gts  debug_add_complexity.gts  debug_after_pi.gts  debug_array.gts  debug_array_access.gts  debug_array_element.gts  debug_array_in_method.gts  debug_array_simple.gts  debug_benchmark_sequence.gts  debug_binary_op.gts  debug_call_assign.gts  debug_circular_import.gts  debug_circular_minimal.gts  debug_class_method.gts  debug_class_minimal.gts  debug_class_simple.gts  debug_concat_only.gts  debug_condition.gts  (+354 more)
benchmark/: multiecma_test.gts  run_benchmark.sh  run_working_benchmark.sh
imports/: README.md  RESULTS.md  analysis.md  main.gts
modules/libtorch/: CMakeLists.txt  libtorch_wrapper.cpp  libtorch_wrapper.h  torch.gts
tests/: regex.gts  time.gts
